<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>contact-rec-axioms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-core</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-fast</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-mf</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-nn</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-formats</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.ranksys</groupId>
            <artifactId>RankSys-diversity</artifactId>
            <version>0.4.3</version>
        </dependency>
        <dependency>
            <groupId>colt</groupId>
            <artifactId>colt</artifactId>
            <version>1.2.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.googlecode.matrix-toolkits-java</groupId>
            <artifactId>mtj</artifactId>
            <version>1.0.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.terrier</groupId>
            <artifactId>terrier-core</artifactId>
            <version>5.1</version>
        </dependency>
        <dependency>
            <groupId>org.terrier</groupId>
            <artifactId>terrier-realtime</artifactId>
            <version>5.1</version>
        </dependency>
    </dependencies>
</project>